# Cutie_demo

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeLists_.txt  CMakePresets.json  README.md
cmake/: cutie_config.cmake
comp/comp_b/test/: test_comp_b.cpp
cutie_demo_lib/: CMakeLists.txt
cutie_demo_lib/buffer/: CMakeLists.txt
cutie_demo_lib/buffer/include/buffer/: buffer.h
cutie_demo_lib/buffer/source/: buffer.c
cutie_demo_lib/buffer/test/: CMakeLists.txt
cutie_demo_lib/buffer/test/suites/: test_buffer.cpp
demo1/: CMakeLists.txt
demo1/test/: test_binary_search.cpp
demo2/comp_a/: CMakelists.txt  comp_a.c  comp_a.h
demo2/comp_b/: comp_b.c  comp_b.h
doc/: cpm.md
googlemock_demo/: CMakeLists.txt
googlemock_demo/include/: gmock_demo.h
googlemock_demo/src/: gmock_demo.c
googlemock_demo/test/: CMakeLists.txt  ut_gmock_demo.cpp
